--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "css-loader": "^0.28.11",
     "html-loader": "^0.5.5",
     "style-loader": "^0.19.1",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.5"
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   }
 }
